--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
@@ -23,50 +23,7 @@
                     </div>
                 </div>
                 <div class="display_inline float_right">
-                    {% if (response.values.moduleRows[4]['active'] == true) %}
-                        <div class="navbar_header_content navbar_header_icon">
-                            <div class="dropdown">
-                                <button id="search_button" class="dropdown-toggle button_custom" data-toggle="dropdown">
-                                    <i class="fa fa-search fa-lg"></i>
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    <form id="form_search_module_mobile" class="form_search_module display_inline" action="{{path("search_module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-                                        <div class="button_search">
-                                            <i class="fa fa-search"></i>
-                                        </div>
-                                        <div class="form-group">
-                                            <input id="form_search_mobile_words" class="form-control" type="text" name="form_search[words]" required="required" placeholder="Search in the site" autocomplete="off" autocorrect="off" spellcheck="false">
-                                        </div>
-                                        <input id="form_search_mobile__token" type="hidden" name="form_search[_token]" value="{{csrf_token("intention")}}">
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    {% endif %}
-                    {% if (response.values.moduleRows[3]['active'] == true) %}
-                        <div class="navbar_header_content navbar_header_icon">
-                            <div class="dropdown">
-                                <button id="language_button" class="dropdown-toggle button_custom" data-toggle="dropdown">
-                                    <i class="fa fa-globe fa-lg"></i>
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    {#{-render(controller("UebusaitoBundle:Language:text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}#}
-                                </div>
-                            </div>
-                        </div>
-                    {% endif %}
-                    {% if (response.values.moduleRows[1]['active'] == true) %}
-                        <div class="navbar_header_content navbar_header_icon">
-                            <div class="dropdown">
-                                <button id="authentication_button_mobile" class="dropdown-toggle button_custom" data-toggle="dropdown">
-                                    <i class="fa fa-user fa-lg"></i>
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right">
-                                    {#{-render(controller("UebusaitoBundle:Authentication:module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}#}
-                                </div>
-                            </div>
-                        </div>
-                    {% endif %}
+                    {{headerMobile}}
                 </div>
             </div>
             <div id="menu_root_navbar" class="navbar-collapse collapse">
@@ -115,3 +72,104 @@
     </div>
 {% endblock %}
 {% block moduleFooter %}{% endblock %}
+
+{% set headerMobile %}
+    {% if (response.values.moduleRows[4]['active'] == true) %}
+        <div class="navbar_header_content navbar_header_icon">
+            <div class="dropdown">
+                <button id="search_button" class="dropdown-toggle button_custom" data-toggle="dropdown">
+                    <i class="fa fa-search fa-lg"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right horizontal_center">
+                    <form id="form_search_module_mobile" class="form_search_module display_inline" action="{{path("search_module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+                        <div class="button_search">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <div class="form-group">
+                            <input id="form_search_mobile_words" class="form-control" type="text" name="form_search[words]" required="required" placeholder="Search in the site" autocomplete="off" autocorrect="off" spellcheck="false">
+                        </div>
+                        <input id="form_search_mobile__token" type="hidden" name="form_search[_token]" value="{{csrf_token("intention")}}">
+                    </form>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if (response.values.moduleRows[3]['active'] == true) %}
+        <div class="navbar_header_content navbar_header_icon">
+            <div class="dropdown">
+                <button id="language_button" class="dropdown-toggle button_custom" data-toggle="dropdown">
+                    <i class="fa fa-globe fa-lg"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right horizontal_center">
+                    <img id="language_flag_mobile_{{app.request.getLocale()}}" class="language_text_flag display_inline" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template'] ~ "/lang/" ~ app.request.getLocale() ~ ".png")}}" alt="{{app.request.getLocale()}}.png"/>
+                    <form id="form_language_text_mobile" class="form_language_text display_inline" action="{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+                        <div class="form-group">
+                            <select id="form_language_mobile_codeText" class="form_language_codeText display_inline form-control" name="form_language[codeText]">
+                                {{response.values.languageOptions|raw}}
+                            </select>
+                        </div>
+                        <input id="form_language_mobile__token" type="hidden" name="form_language[_token]" value="{{csrf_token("intention")}}">
+                    </form>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if (response.values.moduleRows[1]['active'] == true) %}
+        <div class="navbar_header_content navbar_header_icon">
+            <div class="dropdown">
+                <button id="authentication_button_mobile" class="dropdown-toggle button_custom" data-toggle="dropdown">
+                    <i class="fa fa-user fa-lg"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    {% if app.user != null %}
+                        <p class="margin_clear"><b>{% trans %}authentication_1{% endtrans %}</b></p>
+                        <p class="margin_clear">{{response.values.user.username}}</p>
+                        <p class="margin_clear"><b>{% trans %}authentication_2{% endtrans %}</b></p>
+                        <p class="margin_clear">
+                            {% for value in response.values.roleUserRow %}
+                                - {{value|trans}}
+                            {% endfor %}
+                        </p>
+                        <p class="margin_clear"><b>{% trans %}authentication_3{% endtrans %}</b></p>
+                        <p class="margin_clear">{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
+                        <div class="margin_top horizontal_center">
+                            <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
+                            <a class="button_custom btn-block logout_button" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
+                        </div>
+                    {% else %}
+                        <form id="form_user_authentication_mobile" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+                            <div class="form-group">
+                                <label class="control-label required" for="_username">Username</label>
+                                <input id="form_user_authentication_mobile__username" class="form-control" type="text" name="_username" required="required">
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label required" for="_password">Password</label>
+                                <input id="form_user_authentication_mobile__password" class="form-control" type="password" name="_password" required="required">
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input class="button_custom" type="submit" value="Login">
+                                    <div class="checkbox remember_me_fix">
+                                        <label for="_remember_me">
+                                            <input type="checkbox" name="_remember_me" value="1"> Remember me
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            {{-include("@UebusaitoBundleViews/include/captcha.html.twig")-}}
+                            
+                            <input id="form_user_authentication_mobile__token" type="hidden" name="_token" value="{{csrf_token("intention")}}">
+                        </form>
+                        {% if (settingRow['website_active'] == true) %}
+                            <div class="horizontal_center">
+                                <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
+                                <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
+                            </div>
+                        {% endif %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+{% endset %}
