Fix security - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
@@ -15,9 +15,9 @@
                 </div>
                 
                 <div class="form-group">
-                    {{form_label(form.positionInColumn, "module_profile_3")}}
-                    {{form_errors(form.positionInColumn)}}
-                    {{form_widget(form.positionInColumn, {'attr': {'size': '8'}})}}
+                    {{form_label(form.rankInColumn, "module_profile_3")}}
+                    {{form_errors(form.rankInColumn)}}
+                    {{form_widget(form.rankInColumn, {'attr': {'size': '8'}})}}
 
                     {{form_row(form.sort)}}
                     <div id="module_position_sort">
